--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -186,3 +186,14 @@ img {
 .show {
   right: 0;
 }
+
+/* Active Menu */
+.active::after {
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: var(--first-color);
+}
