--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -113,6 +113,18 @@ img {
   text-align: center;
 }
 
+.section-title::after {
+  position: absolute;
+  content: '';
+  width: 40px;
+  height: 0.18rem;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 2rem;
+  background-color: var(--first-color);
+}
+
 /******************************
  * LAYOUT
  ******************************/
