--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -326,3 +326,46 @@ img {
   background-color: var(--first-color);
   color: var(--white-color);
 }
+
+/******************************
+ * PROJECTS
+ ******************************/
+.projects {
+  background-color: var(--white-color);
+}
+
+.projects__container {
+  justify-items: center;
+  row-gap: 2rem;
+}
+
+.project__img {
+  position: relative;
+  overflow: hidden;
+}
+
+.project__img img {
+  border-radius: 0.5rem;
+}
+
+.project__link {
+  position: absolute;
+  bottom: -100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 0.5rem;
+  cursor: pointer;
+  backdrop-filter: blur(10px);
+  transition: 0.3s;
+}
+
+.project__img:hover .project__link {
+  bottom: 0;
+}
+.project__link-name {
+  color: var(--dark-color);
+}
