--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -250,7 +250,7 @@ img {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: 300px;
+  width: 350px;
 }
 
 /******************************
@@ -360,7 +360,7 @@ img {
   border-radius: 0.5rem;
   cursor: pointer;
   backdrop-filter: blur(10px);
-  transition: 0.3s;
+  transition: 0.4s;
 }
 
 .project__img:hover .project__link {
@@ -368,4 +368,7 @@ img {
 }
 .project__link-name {
   color: var(--dark-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
