--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -390,7 +390,7 @@ img {
   margin-bottom: var(--mb-2);
 }
 
-.contact__inputs {
+/* .contact__inputs {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1rem;
@@ -417,4 +417,4 @@ img {
   outline: none;
   font-size: var(--normal-font-size);
   cursor: pointer;
-}
+} */
