--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -418,3 +418,29 @@ img {
   font-size: var(--normal-font-size);
   cursor: pointer;
 } */
+
+/******************************
+ * FOOTER
+ ******************************/
+.footer {
+  background-color: var(--dark-color);
+}
+
+.footer__container {
+  row-gap: 2rem;
+}
+
+.footer__title {
+  font-size: var(--normal-font-size);
+  color: var(--white-color);
+  margin-bottom: var(--mb-2);
+}
+
+.footer__social {
+  font-size: 1.4rem;
+  margin-right: var(--mb-1);
+}
+
+.footer__social:hover {
+  color: var(--first-color);
+}
