Add resume to navbar

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -188,6 +188,10 @@ img {
   color: var(--first-color);
 }
 
+.nav__link .resume {
+  color: var(--white-color);
+}
+
 .nav__logo {
   color: var(--white-color);
   display: flex;
